Fix Active post container spacing

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -1,5 +1,5 @@
 .feed {
-  flex: 1;
+  /* flex: 1; */
   /* padding: 30px 150px; */
   display: flex;
   flex-direction: column;
@@ -56,26 +56,29 @@
 }
 
 .dashboard > * {
-  margin: 1rem;
+  margin: 0.5rem;
 }
 
 .dashboard__active {
   max-width: 980px;
   display: grid;
   grid-template-columns: 1fr;
-  gap: 2rem;
-  justify-content: center;
+  /* gap: 2rem; */
+  /* justify-content: center; */
 }
 
 .feed__body {
-  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 @media screen and (max-width: 850px) {
   .feed__body {
     flex-direction: row;
     justify-content: flex-start;
+    padding: 0;
     /* overflow: scroll; */
     max-width: 650px;
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
   }
 }
