--- a/src/components/Feed/Post/Post.css
+++ b/src/components/Feed/Post/Post.css
@@ -78,7 +78,7 @@
   background-color: #fff;
   border-radius: 1rem;
   padding: 1rem;
-  height: 15rem;
+  height: 8rem;
   overflow: hidden;
   border-bottom: #292929 solid 1px;
   display: flex;
